// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'alert/base.scss' prefixer > snap 1`] = `
".som-alert {
  @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
}"
`;

exports[`'alert/styled.scss' prefixer > snap 1`] = `
".som-alert {
  @apply rounded-box border p-4 text-base-content border-base-200;
}
.som-alert-primary {
  @apply text-primary-content border-primary/20 bg-primary;
}
.som-alert-success {
  @apply text-success-content border-success/20 bg-success;
}
.som-alert-warning {
  @apply text-warning-content border-warning/20 bg-warning;
}
.som-alert-error {
  @apply text-error-content border-error/20 bg-error;
}
.som-alert-info {
  @apply text-info-content border-info/20 bg-info;
}
.som-alert-neutral {
  @apply text-neutral-content border-neutral/20 bg-neutral;
}"
`;

exports[`'avatar/base.scss' prefixer > snap 1`] = `
".som-avatar {
  @apply relative inline-flex;
}
.som-avatar > div {
  @apply block aspect-square overflow-hidden;
}
.som-avatar img {
  @apply h-full w-full object-cover;
}
.som-avatar.som-placeholder > div {
  @apply flex items-center justify-center;
}"
`;

exports[`'avatar/styled.scss' prefixer > snap 1`] = `
".som-avatar-group {
  @apply flex overflow-hidden;
}
.som-avatar-group :where(.som-avatar) {
  @apply border-base-100 overflow-hidden rounded-full border-4;
}"
`;

exports[`'avatar/utils.scss' prefixer > snap 1`] = `""`;

exports[`'badge/base.scss' prefixer > snap 1`] = `
".som-badge {
  @apply inline-flex items-center justify-center transition duration-200 ease-out h-5 text-sm leading-5 w-[fit-content] pl-[0.563rem] pr-[0.563rem];
}"
`;

exports[`'badge/styled.scss' prefixer > snap 1`] = `
".som-badge {
  @apply rounded-badge border border-base-200 bg-base-100 text-base-content;
}
.som-badge-primary {
  @apply border-primary bg-primary text-primary-content;
}
.som-badge-success {
  @apply border-success bg-success text-success-content;
}
.som-badge-warning {
  @apply border-warning bg-warning text-warning-content;
}
.som-badge-error {
  @apply border-error bg-error text-error-content;
}
.som-badge-info {
  @apply border-info bg-info text-info-content;
}
.som-badge-neutral {
  @apply border-neutral bg-neutral text-neutral-content;
}
.som-badge-ghost {
  @apply border-base-200 bg-base-200 text-base-content;
}
.som-badge-outline {
  @apply border-current border-opacity-50 bg-transparent text-current;
}
.som-badge-outline.som-badge-primary {
  @apply text-primary;
}
.som-badge-outline.som-badge-success {
  @apply text-success;
}
.som-badge-outline.som-badge-warning {
  @apply text-warning;
}
.som-badge-outline.som-badge-error {
  @apply text-error;
}
.som-badge-outline.som-badge-info {
  @apply text-info;
}
.som-badge-outline.som-badge-neutral {
  @apply text-neutral;
}"
`;

exports[`'badge/utils.scss' prefixer > snap 1`] = `
".som-badge-xs {
  @apply h-3 text-xs leading-3;
  padding-left: 0.313rem;
  padding-right: 0.313rem;
}
.som-badge-sm {
  @apply h-4 text-xs leading-4;
  padding-left: 0.438rem;
  padding-right: 0.438rem;
}
.som-badge-md {
  @apply h-5 text-sm leading-5;
  padding-left: 0.563rem;
  padding-right: 0.563rem;
}
.som-badge-lg {
  @apply h-6 text-base leading-6;
  padding-left: 0.688rem;
  padding-right: 0.688rem;
}"
`;

exports[`'button/base.scss' prefixer > snap 1`] = `
".som-btn {
  @apply rounded-btn inline-flex flex-shrink-0 cursor-pointer select-none flex-wrap items-center justify-center border-transparent text-center transition duration-200 ease-out min-h-12 h-12 px-4;
  font-size: 0.875rem;
  line-height: 1em;
}
.som-btn-disabled, .som-btn[disabled], .som-btn:disabled {
  @apply pointer-events-none;
}

/* radio input and checkbox as button */"
`;

exports[`'button/styled.scss' prefixer > snap 1`] = `
".som-som-btn {
  @apply border-base-200 bg-base-200 text-base-content outline-base-200 no-underline;
  border-width: var(--ice-border-btn, 1px);
}
.som-som-btn:focus-visible {
  @apply outline outline-2 outline-offset-2;
}
.som-som-btn:active {
  @apply border-base-300 bg-base-300;
}
.som-som-btn.som-som-btn-active {
  @apply border-base-300 bg-base-300;
}
.som-som-btn-primary {
  @apply border-primary bg-primary text-primary-content outline-primary;
}
.som-som-btn-primary:active {
  @apply border-primary-active bg-primary-active;
}
.som-som-btn-primary.som-som-btn-active {
  @apply border-primary-active bg-primary-active;
}
.som-som-btn-success {
  @apply border-success bg-success text-success-content outline-success;
}
.som-som-btn-success:active {
  @apply border-success-active bg-success-active;
}
.som-som-btn-success.som-som-btn-active {
  @apply border-success-active bg-success-active;
}
.som-som-btn-warning {
  @apply border-warning bg-warning text-warning-content outline-warning;
}
.som-som-btn-warning:active {
  @apply border-warning-active bg-warning-active;
}
.som-som-btn-warning.som-som-btn-active {
  @apply border-warning-active bg-warning-active;
}
.som-som-btn-error {
  @apply border-error bg-error text-error-content outline-error;
}
.som-som-btn-error:active {
  @apply border-error-active bg-error-active;
}
.som-som-btn-error.som-som-btn-active {
  @apply border-error-active bg-error-active;
}
.som-som-btn-info {
  @apply border-info bg-info text-info-content outline-info;
}
.som-som-btn-info:active {
  @apply border-info-active bg-info-active;
}
.som-som-btn-info.som-som-btn-active {
  @apply border-info-active bg-info-active;
}
.som-som-btn-neutral {
  @apply border-neutral bg-neutral text-neutral-content outline-neutral;
}
.som-som-btn-neutral:active {
  @apply border-neutral-active bg-neutral-active;
}
.som-som-btn-neutral.som-som-btn-active {
  @apply border-neutral-active bg-neutral-active;
}
.som-som-btn.som-som-glass {
  @apply shadow-none outline-current;
}
.som-som-btn.som-som-glass:active {
  --ice-glass-opacity: 25%;
  --ice-glass-border-opacity: 15%;
}
.som-som-btn.som-som-glass.som-som-btn-active {
  --ice-glass-opacity: 25%;
  --ice-glass-border-opacity: 15%;
}
.som-som-btn-ghost {
  @apply border border-transparent bg-transparent text-current shadow-none outline-current;
}
.som-som-btn-ghost:active {
  @apply border-opacity-0 bg-base-content bg-opacity-20;
}
.som-som-btn-ghost.som-som-btn-active {
  @apply border-opacity-0 bg-base-content bg-opacity-20;
}
.som-som-btn-link {
  @apply text-primary border-transparent bg-transparent underline shadow-none outline-current;
}
.som-som-btn-link:active {
  @apply border-transparent bg-transparent underline;
}
.som-som-btn-link.som-som-btn-active {
  @apply border-transparent bg-transparent underline;
}
.som-som-btn-outline {
  @apply border-current bg-transparent shadow-none text-base-content;
}
.som-som-btn-outline:active {
  @apply border-base-content bg-base-content text-base-100;
}
.som-som-btn-outline.som-som-btn-active {
  @apply border-base-content bg-base-content text-base-100;
}
.som-som-btn-outline.som-som-btn-primary {
  @apply text-primary;
}
.som-som-btn-outline.som-som-btn-primary:active {
  @apply border-primary-active bg-primary-active text-primary-content;
}
.som-som-btn-outline.som-som-btn-primary.som-som-btn-active {
  @apply border-primary-active bg-primary-active text-primary-content;
}
.som-som-btn-outline.som-som-btn-success {
  @apply text-success;
}
.som-som-btn-outline.som-som-btn-success:active {
  @apply border-success-active bg-success-active text-success-content;
}
.som-som-btn-outline.som-som-btn-success.som-som-btn-active {
  @apply border-success-active bg-success-active text-success-content;
}
.som-som-btn-outline.som-som-btn-warning {
  @apply text-warning;
}
.som-som-btn-outline.som-som-btn-warning:active {
  @apply border-warning-active bg-warning-active text-warning-content;
}
.som-som-btn-outline.som-som-btn-warning.som-som-btn-active {
  @apply border-warning-active bg-warning-active text-warning-content;
}
.som-som-btn-outline.som-som-btn-error {
  @apply text-error;
}
.som-som-btn-outline.som-som-btn-error:active {
  @apply border-error-active bg-error-active text-error-content;
}
.som-som-btn-outline.som-som-btn-error.som-som-btn-active {
  @apply border-error-active bg-error-active text-error-content;
}
.som-som-btn-outline.som-som-btn-info {
  @apply text-info;
}
.som-som-btn-outline.som-som-btn-info:active {
  @apply border-info-active bg-info-active text-info-content;
}
.som-som-btn-outline.som-som-btn-info.som-som-btn-active {
  @apply border-info-active bg-info-active text-info-content;
}
.som-som-btn-outline.som-som-btn-neutral {
  @apply text-neutral;
}
.som-som-btn-outline.som-som-btn-neutral:active {
  @apply border-neutral-active bg-neutral-active text-neutral-content;
}
.som-som-btn-outline.som-som-btn-neutral.som-som-btn-active {
  @apply border-neutral-active bg-neutral-active text-neutral-content;
}
.som-som-btn.som-som-btn-disabled, .som-som-btn[disabled], .som-som-btn:disabled {
  @apply bg-neutral text-base-content border-opacity-0 bg-opacity-20 text-opacity-20;
}"
`;

exports[`'button/utils.scss' prefixer > snap 1`] = `
".som-btn-xs {
  @apply min-h-6 h-6 px-2;
  font-size: 0.75rem;
}
.som-btn-sm {
  @apply min-h-8 h-8 px-3;
  font-size: 0.875rem;
}
.som-btn-md {
  @apply min-h-12 h-12 px-4;
  font-size: 0.875rem;
}
.som-btn-lg {
  @apply min-h-16 h-16 px-6;
  font-size: 1.125rem;
}
.som-btn-wide {
  @apply w-64;
}
.som-btn-block {
  @apply w-full;
}
.som-btn-square {
  @apply h-12 w-12 p-0;
}
.som-btn-square:where(.som-btn-xs) {
  @apply h-6 w-6 p-0;
}
.som-btn-square:where(.som-btn-sm) {
  @apply h-8 w-8 p-0;
}
.som-btn-square:where(.som-btn-md) {
  @apply h-12 w-12 p-0;
}
.som-btn-square:where(.som-btn-lg) {
  @apply h-16 w-16 p-0;
}
.som-btn-circle {
  @apply h-12 w-12 rounded-full p-0;
}
.som-btn-circle:where(.som-btn-xs) {
  @apply h-6 w-6 rounded-full p-0;
}
.som-btn-circle:where(.som-btn-sm) {
  @apply h-8 w-8 rounded-full p-0;
}
.som-btn-circle:where(.som-btn-md) {
  @apply h-12 w-12 rounded-full p-0;
}
.som-btn-circle:where(.som-btn-lg) {
  @apply h-16 w-16 rounded-full p-0;
}"
`;

exports[`'chat/base.scss' prefixer > snap 1`] = `
".som-chat {
  @apply grid grid-cols-2 gap-x-3 py-1;
}
.som-chat-image {
  @apply row-span-2 self-end;
}
.som-chat-header {
  @apply row-start-1 text-sm;
}
.som-chat-footer {
  @apply row-start-3 text-sm;
}
.som-chat-bubble {
  @apply relative block w-fit px-4 py-2;
  max-width: 90%;
}
.som-chat-bubble:before {
  @apply absolute bottom-0 h-3 w-3;
  background-color: inherit;
  content: \\"\\";
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
}
.som-chat-start {
  @apply place-items-start;
  grid-template-columns: auto 1fr;
}
.som-chat-start .som-chat-header {
  @apply col-start-2;
}
.som-chat-start .som-chat-footer {
  @apply col-start-2;
}
.som-chat-start .som-chat-image {
  @apply col-start-1;
}
.som-chat-start .som-chat-bubble {
  @apply col-start-2;
}
.som-chat-start .som-chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 3 3 L 3 0 C 3 1 1 3 0 3'/%3e%3c/svg%3e\\");
}
[dir=rtl] .som-chat-start .som-chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 1 3 L 3 3 C 2 3 0 1 0 0'/%3e%3c/svg%3e\\");
}
.som-chat-end {
  @apply place-items-end;
  grid-template-columns: 1fr auto;
}
.som-chat-end .som-chat-header {
  @apply col-start-1;
}
.som-chat-end .som-chat-footer {
  @apply col-start-1;
}
.som-chat-end .som-chat-image {
  @apply col-start-2;
}
.som-chat-end .som-chat-bubble {
  @apply col-start-1;
}
.som-chat-end .som-chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 1 3 L 3 3 C 2 3 0 1 0 0'/%3e%3c/svg%3e\\");
}
[dir=rtl] .som-chat-end .som-chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 3 3 L 3 0 C 3 1 1 3 0 3'/%3e%3c/svg%3e\\");
}"
`;

exports[`'chat/styled.scss' prefixer > snap 1`] = `
".som-chat-bubble {
  @apply bg-neutral text-neutral-content rounded-box;
  min-height: 2.75rem;
  min-width: 2.75rem;
}
.som-chat-bubble-primary {
  @apply bg-primary text-primary-content;
}
.som-chat-bubble-success {
  @apply bg-success text-success-content;
}
.som-chat-bubble-warning {
  @apply bg-warning text-warning-content;
}
.som-chat-bubble-error {
  @apply bg-error text-error-content;
}
.som-chat-bubble-info {
  @apply bg-info text-info-content;
}
.som-chat-bubble-neutral {
  @apply bg-neutral text-neutral-content;
}
.som-chat-start .som-chat-bubble {
  @apply rounded-bl-none;
}
.som-chat-start .som-chat-bubble:before {
  left: -0.749rem;
}
.som-chat-end .som-chat-bubble {
  @apply rounded-br-none;
}
.som-chat-end .som-chat-bubble:before {
  left: 99.9%;
}"
`;

exports[`'checkbox/base.scss' prefixer > snap 1`] = `
".som-checkbox {
  @apply shrink-0;
}"
`;

exports[`'checkbox/styled.scss' prefixer > snap 1`] = `
".som-som-checkbox {
  @apply border-base-content rounded-btn h-6 w-6 cursor-pointer appearance-none border border-opacity-20;
}
.som-som-checkbox:focus-visible {
  @apply outline-base-content outline outline-2 outline-offset-2;
}
.som-som-checkbox:checked, .som-som-checkbox[checked=true], .som-som-checkbox[aria-checked=true] {
  @apply bg-base-content bg-no-repeat;
  animation: checkmark var(--ice-animation-input, 0.2s) ease-out;
}
.som-som-checkbox:indeterminate {
  @apply bg-base-content bg-no-repeat;
  animation: checkmark var(--ice-animation-input, 0.2s) ease-out;
}
.som-som-checkbox-primary {
  @apply border-primary [@media(hover:hover)]:hover:border-primary;
}
.som-som-checkbox-primary:focus-visible {
  @apply outline-primary;
}
.som-som-checkbox-primary:checked, .som-som-checkbox-primary[checked=true], .som-som-checkbox-primary[aria-checked=true] {
  @apply border-primary bg-primary text-primary-content;
}
.som-som-checkbox-success {
  @apply border-success [@media(hover:hover)]:hover:border-success;
}
.som-som-checkbox-success:focus-visible {
  @apply outline-success;
}
.som-som-checkbox-success:checked, .som-som-checkbox-success[checked=true], .som-som-checkbox-success[aria-checked=true] {
  @apply border-success bg-success text-success-content;
}
.som-som-checkbox-warning {
  @apply border-warning [@media(hover:hover)]:hover:border-warning;
}
.som-som-checkbox-warning:focus-visible {
  @apply outline-warning;
}
.som-som-checkbox-warning:checked, .som-som-checkbox-warning[checked=true], .som-som-checkbox-warning[aria-checked=true] {
  @apply border-warning bg-warning text-warning-content;
}
.som-som-checkbox-error {
  @apply border-error [@media(hover:hover)]:hover:border-error;
}
.som-som-checkbox-error:focus-visible {
  @apply outline-error;
}
.som-som-checkbox-error:checked, .som-som-checkbox-error[checked=true], .som-som-checkbox-error[aria-checked=true] {
  @apply border-error bg-error text-error-content;
}
.som-som-checkbox-info {
  @apply border-info [@media(hover:hover)]:hover:border-info;
}
.som-som-checkbox-info:focus-visible {
  @apply outline-info;
}
.som-som-checkbox-info:checked, .som-som-checkbox-info[checked=true], .som-som-checkbox-info[aria-checked=true] {
  @apply border-info bg-info text-info-content;
}
.som-som-checkbox-neutral {
  @apply border-neutral [@media(hover:hover)]:hover:border-neutral;
}
.som-som-checkbox-neutral:focus-visible {
  @apply outline-neutral;
}
.som-som-checkbox-neutral:checked, .som-som-checkbox-neutral[checked=true], .som-som-checkbox-neutral[aria-checked=true] {
  @apply border-neutral bg-neutral text-neutral-content;
}
.som-som-checkbox:disabled {
  @apply bg-base-content cursor-not-allowed border-transparent opacity-20;
}

@keyframes checkmark {
  0% {
    background-position-y: 5px;
  }
  50% {
    background-position-y: -2px;
  }
  100% {
    background-position-y: 0;
  }
}
.som-som-checkbox-mark {
  @apply hidden;
}"
`;

exports[`'checkbox/utils.scss' prefixer > snap 1`] = `
".som-checkbox-xs {
  @apply h-4 w-4;
}
.som-checkbox-sm {
  @apply h-5 w-5;
}
.som-checkbox-md {
  @apply h-6 w-6;
}
.som-checkbox-lg {
  @apply h-8 w-8;
}"
`;

exports[`'input/base.scss' prefixer > snap 1`] = `
".som-input {
  @apply flex-shrink;
  @apply h-12 px-4 text-sm leading-loose;
}"
`;

exports[`'input/styled.scss' prefixer > snap 1`] = `
".som-input {
  @apply border-base-content bg-base-100 rounded-btn border border-opacity-0 text-base;
}
.som-input input:focus {
  @apply outline-none;
}
.som-input[list]::-webkit-calendar-picker-indicator {
  line-height: 1em;
}
.som-input-bordered {
  @apply border-opacity-20;
}
.som-input:focus, .som-input:focus-within {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.som-input-ghost {
  @apply bg-opacity-5;
}
.som-input-ghost:focus, .som-input-ghost:focus-within {
  @apply text-base-content bg-opacity-100;
  box-shadow: none;
}
.som-input-primary {
  @apply border-primary;
}
.som-input-primary:focus, .som-input-primary:focus-within {
  @apply outline-primary;
}
.som-input-success {
  @apply border-success;
}
.som-input-success:focus, .som-input-success:focus-within {
  @apply outline-success;
}
.som-input-warning {
  @apply border-warning;
}
.som-input-warning:focus, .som-input-warning:focus-within {
  @apply outline-warning;
}
.som-input-error {
  @apply border-error;
}
.som-input-error:focus, .som-input-error:focus-within {
  @apply outline-error;
}
.som-input-info {
  @apply border-info;
}
.som-input-info:focus, .som-input-info:focus-within {
  @apply outline-info;
}
.som-input-neutral {
  @apply border-neutral;
}
.som-input-neutral:focus, .som-input-neutral:focus-within {
  @apply outline-neutral;
}
.som-input-disabled, .som-input:disabled, .som-input[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}"
`;

exports[`'input/utils.scss' prefixer > snap 1`] = `
".som-input-xs {
  @apply h-6 px-2 text-xs leading-relaxed;
}
.som-input-md {
  @apply h-12 px-4 text-sm leading-loose;
}
.som-input-lg {
  @apply h-16 px-6 text-lg leading-loose;
}
.som-input-sm {
  @apply h-8 px-3 text-sm leading-8;
}"
`;

exports[`'link/base.scss' prefixer > snap 1`] = `
".som-link {
  @apply cursor-pointer underline;
}
.som-link-hover {
  @apply no-underline [@media(hover:hover)]:hover:underline;
}"
`;

exports[`'link/styled.scss' prefixer > snap 1`] = `
".som-link-primary {
  @apply text-primary [@media(hover:hover)]:hover:text-primary-active;
}
.som-link-success {
  @apply text-success [@media(hover:hover)]:hover:text-success-active;
}
.som-link-warning {
  @apply text-warning [@media(hover:hover)]:hover:text-warning-active;
}
.som-link-error {
  @apply text-error [@media(hover:hover)]:hover:text-error-active;
}
.som-link-info {
  @apply text-info [@media(hover:hover)]:hover:text-info-active;
}
.som-link-neutral {
  @apply text-neutral [@media(hover:hover)]:hover:text-neutral-active;
}
.som-link:focus {
  @apply outline-none;
}
.som-link:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}"
`;

exports[`'progress/base.scss' prefixer > snap 1`] = `
".som-progress {
  @apply relative w-full appearance-none overflow-hidden;
}"
`;

exports[`'progress/styled.scss' prefixer > snap 1`] = `
".som-som-progress {
  @apply rounded-box bg-base-content/20 h-2;
}
.som-som-progress::-moz-progress-bar {
  @apply bg-base-content rounded-box;
}
.som-som-progress-primary::-moz-progress-bar {
  @apply bg-primary rounded-box;
}
.som-som-progress-success::-moz-progress-bar {
  @apply bg-success rounded-box;
}
.som-som-progress-warning::-moz-progress-bar {
  @apply bg-warning rounded-box;
}
.som-som-progress-error::-moz-progress-bar {
  @apply bg-error rounded-box;
}
.som-som-progress-info::-moz-progress-bar {
  @apply bg-info rounded-box;
}
.som-som-progress-neutral::-moz-progress-bar {
  @apply bg-neutral rounded-box;
}
.som-som-progress::-webkit-progress-bar {
  @apply rounded-box bg-transparent;
}
.som-som-progress::-webkit-progress-value {
  @apply bg-base-content rounded-box;
}
.som-som-progress-primary::-webkit-progress-value {
  @apply bg-primary;
}
.som-som-progress-success::-webkit-progress-value {
  @apply bg-success;
}
.som-som-progress-warning::-webkit-progress-value {
  @apply bg-warning;
}
.som-som-progress-error::-webkit-progress-value {
  @apply bg-error;
}
.som-som-progress-info::-webkit-progress-value {
  @apply bg-info;
}
.som-som-progress-neutral::-webkit-progress-value {
  @apply bg-neutral;
}

.som-som-progress:indeterminate {
  background-image: repeating-linear-gradient(90deg, var(--ice-progress-color) -1%, var(--ice-progress-color) 10%, transparent 10%, transparent 90%);
  background-size: 200%;
  background-position-x: 15%;
  animation: progress-loading 5s ease-in-out infinite;
}

.som-som-progress:indeterminate::-moz-progress-bar {
  @apply bg-transparent;
  background-image: repeating-linear-gradient(90deg, var(--ice-progress-color) -1%, var(--ice-progress-color) 10%, transparent 10%, transparent 90%);
  background-size: 200%;
  background-position-x: 15%;
  animation: progress-loading 5s ease-in-out infinite;
}

@keyframes progress-loading {
  50% {
    background-position-x: -115%;
  }
}"
`;

exports[`'radio/base.scss' prefixer > snap 1`] = `
".som-radio {
  @apply shrink-0;
}"
`;

exports[`'radio/styled.scss' prefixer > snap 1`] = `
".som-som-radio {
  @apply border-base-content h-6 w-6 cursor-pointer appearance-none rounded-full border border-opacity-20;
}
.som-som-radio:focus-visible {
  @apply outline-base-content outline outline-2 outline-offset-2;
}
.som-som-radio:checked, .som-som-radio[aria-checked=true] {
  @apply bg-base-content;
  animation: radiomark var(--ice-animation-input, 0.2s) ease-out;
  box-shadow: 0 0 0 4px hsl(var(--ice-b1)) inset, 0 0 0 4px hsl(var(--ice-b1)) inset;
}
.som-som-radio-primary {
  @apply border-primary [@media(hover:hover)]:hover:border-primary;
}
.som-som-radio-primary:focus-visible {
  @apply outline-primary;
}
.som-som-radio-primary:checked, .som-som-radio-primary[aria-checked=true] {
  @apply border-primary bg-primary text-primary-content;
}
.som-som-radio-success {
  @apply border-success [@media(hover:hover)]:hover:border-success;
}
.som-som-radio-success:focus-visible {
  @apply outline-success;
}
.som-som-radio-success:checked, .som-som-radio-success[aria-checked=true] {
  @apply border-success bg-success text-success-content;
}
.som-som-radio-warning {
  @apply border-warning [@media(hover:hover)]:hover:border-warning;
}
.som-som-radio-warning:focus-visible {
  @apply outline-warning;
}
.som-som-radio-warning:checked, .som-som-radio-warning[aria-checked=true] {
  @apply border-warning bg-warning text-warning-content;
}
.som-som-radio-error {
  @apply border-error [@media(hover:hover)]:hover:border-error;
}
.som-som-radio-error:focus-visible {
  @apply outline-error;
}
.som-som-radio-error:checked, .som-som-radio-error[aria-checked=true] {
  @apply border-error bg-error text-error-content;
}
.som-som-radio-info {
  @apply border-info [@media(hover:hover)]:hover:border-info;
}
.som-som-radio-info:focus-visible {
  @apply outline-info;
}
.som-som-radio-info:checked, .som-som-radio-info[aria-checked=true] {
  @apply border-info bg-info text-info-content;
}
.som-som-radio-neutral {
  @apply border-neutral [@media(hover:hover)]:hover:border-neutral;
}
.som-som-radio-neutral:focus-visible {
  @apply outline-neutral;
}
.som-som-radio-neutral:checked, .som-som-radio-neutral[aria-checked=true] {
  @apply border-neutral bg-neutral text-neutral-content;
}
.som-som-radio:disabled {
  @apply cursor-not-allowed opacity-20;
}

@keyframes radiomark {
  0% {
    box-shadow: 0 0 0 12px rgba(var(--ice-base-100)) inset, 0 0 0 12px rgba(var(--ice-base-100)) inset;
  }
  50% {
    box-shadow: 0 0 0 3px rgba(var(--ice-base-100)) inset, 0 0 0 3px rgba(var(--ice-base-100)) inset;
  }
  100% {
    box-shadow: 0 0 0 4px rgba(var(--ice-base-100)) inset, 0 0 0 4px rgba(var(--ice-base-100)) inset;
  }
}
.som-som-radio-mark {
  @apply hidden;
}"
`;

exports[`'radio/utils.scss' prefixer > snap 1`] = `
".som-radio-xs {
  @apply h-4 w-4;
}
.som-radio-sm {
  @apply h-5 w-5;
}
.som-radio-md {
  @apply h-6 w-6;
}
.som-radio-lg {
  @apply h-8 w-8;
}"
`;

exports[`'range/base.scss' prefixer > snap 1`] = `
".som-range {
  @apply h-6 w-full cursor-pointer;
}
.som-range:focus {
  outline: none;
}"
`;

exports[`'range/styled.scss' prefixer > snap 1`] = `
".som-som-range {
  appearance: none;
  --ice-range-shdw: var(--ice-base-content);
  @apply rounded-box overflow-hidden bg-transparent;
}
.som-som-range:focus-visible::-webkit-slider-thumb {
  --ice-focus-shadow: 0 0 0 6px rgba(var(--ice-base-100)) inset, 0 0 0 2rem rgba(var(--ice-range-shdw)) inset;
}
.som-som-range:focus-visible::-moz-range-thumb {
  --ice-focus-shadow: 0 0 0 6px rgba(var(--ice-base-100)) inset, 0 0 0 2rem rgba(var(--ice-range-shdw)) inset;
}
.som-som-range::-webkit-slider-runnable-track {
  @apply rounded-box bg-base-content/10 h-2 w-full;
}
.som-som-range::-moz-range-track {
  @apply rounded-box bg-base-content/10 h-2 w-full;
}
.som-som-range::-webkit-slider-thumb {
  @apply rounded-box bg-base-100 relative h-6 w-6 border-none;
  appearance: none;
  top: 50%;
  color: rgba(var(--ice-range-shdw));
  transform: translateY(-50%);
  --ice-filler-size: 100rem;
  --ice-filler-offset: 0.6rem;
  box-shadow: 0 0 0 3px rgba(var(--ice-range-shdw)) inset, var(--ice-focus-shadow, 0 0), calc(var(--ice-filler-size) * -1 - var(--ice-filler-offset)) 0 0 var(--ice-filler-size);
}
.som-som-range::-moz-range-thumb {
  @apply rounded-box bg-base-100 relative h-6 w-6 border-none;
  top: 50%;
  color: rgba(var(--ice-range-shdw));
  --ice-filler-size: 100rem;
  --ice-filler-offset: 0.5rem;
  box-shadow: 0 0 0 3px rgba(var(--ice-range-shdw)) inset, var(--ice-focus-shadow, 0 0), calc(var(--ice-filler-size) * -1 - var(--ice-filler-offset)) 0 0 var(--ice-filler-size);
}
.som-som-range-primary {
  --ice-range-shdw: var(--ice-primary);
}
.som-som-range-success {
  --ice-range-shdw: var(--ice-success);
}
.som-som-range-warning {
  --ice-range-shdw: var(--ice-warning);
}
.som-som-range-error {
  --ice-range-shdw: var(--ice-error);
}
.som-som-range-info {
  --ice-range-shdw: var(--ice-info);
}
.som-som-range-neutral {
  --ice-range-shdw: var(--ice-neutral);
}"
`;

exports[`'range/utils.scss' prefixer > snap 1`] = `
".som-som-range-xs {
  @apply h-4;
}
.som-som-range-xs::-webkit-slider-runnable-track {
  @apply h-1;
}
.som-som-range-xs::-moz-range-track {
  @apply h-1;
}
.som-som-range-xs::-webkit-slider-thumb {
  @apply h-4 w-4;
  --ice-filler-offset: 0.4rem;
}
.som-som-range-xs::-moz-range-thumb {
  @apply h-4 w-4;
  --ice-filler-offset: 0.4rem;
}
.som-som-range-sm {
  @apply h-5;
}
.som-som-range-sm::-webkit-slider-runnable-track {
  @apply h-1;
}
.som-som-range-sm::-moz-range-track {
  @apply h-1;
}
.som-som-range-sm::-webkit-slider-thumb {
  @apply h-5 w-5;
  --ice-filler-offset: 0.5rem;
}
.som-som-range-sm::-moz-range-thumb {
  @apply h-5 w-5;
  --ice-filler-offset: 0.5rem;
}
.som-som-range-md {
  @apply h-6;
}
.som-som-range-md::-webkit-slider-runnable-track {
  @apply h-2;
}
.som-som-range-md::-moz-range-track {
  @apply h-2;
}
.som-som-range-md::-webkit-slider-thumb {
  @apply h-6 w-6;
  --ice-filler-offset: 0.6rem;
}
.som-som-range-md::-moz-range-thumb {
  @apply h-6 w-6;
  --ice-filler-offset: 0.6rem;
}
.som-som-range-lg {
  @apply h-8;
}
.som-som-range-lg::-webkit-slider-runnable-track {
  @apply h-4;
}
.som-som-range-lg::-moz-range-track {
  @apply h-4;
}
.som-som-range-lg::-webkit-slider-thumb {
  @apply h-8 w-8;
  --ice-filler-offset: 1rem;
}
.som-som-range-lg::-moz-range-thumb {
  @apply h-8 w-8;
  --ice-filler-offset: 1rem;
}"
`;

exports[`'select/base.scss' prefixer > snap 1`] = `
".som-select {
  @apply inline-flex cursor-pointer select-none appearance-none;
  @apply min-h-12 h-12 pl-4 pr-10 text-sm leading-loose;
  /* disabled */
  /* &-disabled,
  &[disabled] {
    @apply pointer-events-none;
  } */
  /* multiple */
}
.som-select[multiple] {
  @apply h-auto;
}"
`;

exports[`'select/styled.scss' prefixer > snap 1`] = `
".som-select {
  @apply border-base-content bg-base-100 rounded-btn border border-opacity-0 pr-10;
  background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
  background-position: calc(100% - 20px) calc(1px + 50%), calc(100% - 16.1px) calc(1px + 50%);
  background-size: 4px 4px, 4px 4px;
  background-repeat: no-repeat;
}
.som-select-bordered {
  @apply border-opacity-20;
}
.som-select:focus {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.som-select-ghost {
  @apply bg-opacity-5;
}
.som-select-ghost:focus {
  @apply text-base-content bg-opacity-100;
}
.som-select-primary {
  @apply border-primary;
}
.som-select-primary:focus {
  @apply outline-primary;
}
.som-select-success {
  @apply border-success;
}
.som-select-success:focus {
  @apply outline-success;
}
.som-select-warning {
  @apply border-warning;
}
.som-select-warning:focus {
  @apply outline-warning;
}
.som-select-error {
  @apply border-error;
}
.som-select-error:focus {
  @apply outline-error;
}
.som-select-info {
  @apply border-info;
}
.som-select-info:focus {
  @apply outline-info;
}
.som-select-neutral {
  @apply border-neutral;
}
.som-select-neutral:focus {
  @apply outline-neutral;
}
.som-select-disabled, .som-select:disabled, .som-select[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}
.som-select-multiple, .som-select[multiple], .som-select[size]:not([size=\\"1\\"]) {
  @apply bg-none pr-4;
}

[dir=rtl] .som-select {
  background-position: calc(0% + 12px) calc(1px + 50%), calc(0% + 16px) calc(1px + 50%);
}"
`;

exports[`'select/utils.scss' prefixer > snap 1`] = `
".som-select-md {
  @apply min-h-12 h-12 pl-4 pr-10 text-sm leading-loose;
}
[dir=rtl] .som-select-md {
  @apply pl-10 pr-4;
}
.som-select-lg {
  @apply min-h-16 h-16 pl-6 pr-8 text-lg leading-loose;
}
[dir=rtl] .som-select-lg {
  @apply pl-8 pr-6;
}
.som-select-sm {
  @apply min-h-8 h-8 pl-3 pr-8 text-sm leading-8;
}
[dir=rtl] .som-select-sm {
  @apply pl-8 pr-3;
}
.som-select-xs {
  @apply min-h-6 h-6 pl-2 pr-8 text-xs leading-relaxed;
}
[dir=rtl] .som-select-xs {
  @apply pl-8 pr-2;
}"
`;

exports[`'textarea/base.scss' prefixer > snap 1`] = `
".som-textarea {
  @apply min-h-12 flex-shrink px-4 py-2 text-sm leading-loose;
}"
`;

exports[`'textarea/styled.scss' prefixer > snap 1`] = `
".som-textarea {
  @apply border-base-content bg-base-100 rounded-btn border border-opacity-0;
}
.som-textarea-bordered {
  @apply border-opacity-20;
}
.som-textarea:focus {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.som-textarea-ghost {
  @apply bg-opacity-5;
}
.som-textarea-ghost:focus {
  @apply text-base-content bg-opacity-100;
  box-shadow: none;
}
.som-textarea-primary {
  @apply border-primary;
}
.som-textarea-primary:focus {
  @apply outline-primary;
}
.som-textarea-success {
  @apply border-success;
}
.som-textarea-success:focus {
  @apply outline-success;
}
.som-textarea-warning {
  @apply border-warning;
}
.som-textarea-warning:focus {
  @apply outline-warning;
}
.som-textarea-error {
  @apply border-error;
}
.som-textarea-error:focus {
  @apply outline-error;
}
.som-textarea-info {
  @apply border-info;
}
.som-textarea-info:focus {
  @apply outline-info;
}
.som-textarea-neutral {
  @apply border-neutral;
}
.som-textarea-neutral:focus {
  @apply outline-neutral;
}
.som-textarea-disabled, .som-textarea:disabled, .som-textarea[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}"
`;

exports[`'textarea/utils.scss' prefixer > snap 1`] = `
".som-textarea-xs {
  @apply px-2 py-1 text-xs leading-relaxed;
}
.som-textarea-sm {
  @apply px-3 py-1 text-sm leading-8;
}
.som-textarea-md {
  @apply px-4 py-3 text-sm leading-loose;
}
.som-textarea-lg {
  @apply px-6 py-4 text-lg leading-loose;
}"
`;

exports[`'toggle/base.scss' prefixer > snap 1`] = `
".som-toggle {
  @apply shrink-0;
}"
`;

exports[`'toggle/styled.scss' prefixer > snap 1`] = `
".som-som-toggle {
  @apply border-base-content bg-base-content rounded-badge h-6 w-12 cursor-pointer appearance-none border border-opacity-20 bg-opacity-50;
  --ice-tglbg: rgba(var(--ice-base-100));
  --ice-handleoffset: 1.5rem;
  --ice-handleoffsetcalculator: calc(var(--ice-handleoffset) * -1);
  --ice-togglehandleborder: 0 0;
  transition: background, box-shadow var(--ice-animation-input, 0.2s) ease-out;
  box-shadow: var(--ice-handleoffsetcalculator) 0 0 2px var(--ice-tglbg) inset, 0 0 0 2px var(--ice-tglbg) inset, var(--ice-togglehandleborder);
}
[dir=rtl] .som-som-toggle {
  --ice-handleoffsetcalculator: calc(var(--ice-handleoffset) * 1);
}
.som-som-toggle:focus-visible {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.som-som-toggle:checked, .som-som-toggle[checked=true], .som-som-toggle[aria-checked=true] {
  @apply border-opacity-100 bg-opacity-100;
  --ice-handleoffsetcalculator: var(--ice-handleoffset);
}
[dir=rtl] .som-som-toggle:checked, [dir=rtl] .som-som-toggle[checked=true], [dir=rtl] .som-som-toggle[aria-checked=true] {
  --ice-handleoffsetcalculator: calc(var(--ice-handleoffset) * -1);
}
.som-som-toggle:indeterminate {
  @apply border-opacity-100 bg-opacity-100;
  box-shadow: calc(var(--ice-handleoffset) / 2) 0 0 2px var(--ice-tglbg) inset, calc(var(--ice-handleoffset) / -2) 0 0 2px var(--ice-tglbg) inset, 0 0 0 2px var(--ice-tglbg) inset;
}
[dir=rtl] .som-som-toggle:indeterminate {
  box-shadow: calc(var(--ice-handleoffset) / 2) 0 0 2px var(--ice-tglbg) inset, calc(var(--ice-handleoffset) / -2) 0 0 2px var(--ice-tglbg) inset, 0 0 0 2px var(--ice-tglbg) inset;
}
.som-som-toggle-primary:focus-visible {
  @apply outline-primary;
}
.som-som-toggle-primary:checked, .som-som-toggle-primary[checked=true], .som-som-toggle-primary[aria-checked=true] {
  @apply border-primary bg-primary text-primary-content border-opacity-10;
}
.som-som-toggle-success:focus-visible {
  @apply outline-success;
}
.som-som-toggle-success:checked, .som-som-toggle-success[checked=true], .som-som-toggle-success[aria-checked=true] {
  @apply border-success bg-success text-success-content border-opacity-10;
}
.som-som-toggle-warning:focus-visible {
  @apply outline-warning;
}
.som-som-toggle-warning:checked, .som-som-toggle-warning[checked=true], .som-som-toggle-warning[aria-checked=true] {
  @apply border-warning bg-warning text-warning-content border-opacity-10;
}
.som-som-toggle-error:focus-visible {
  @apply outline-error;
}
.som-som-toggle-error:checked, .som-som-toggle-error[checked=true], .som-som-toggle-error[aria-checked=true] {
  @apply border-error bg-error text-error-content border-opacity-10;
}
.som-som-toggle-info:focus-visible {
  @apply outline-info;
}
.som-som-toggle-info:checked, .som-som-toggle-info[checked=true], .som-som-toggle-info[aria-checked=true] {
  @apply border-info bg-info text-info-content border-opacity-10;
}
.som-som-toggle-neutral:focus-visible {
  @apply outline-neutral;
}
.som-som-toggle-neutral:checked, .som-som-toggle-neutral[checked=true], .som-som-toggle-neutral[aria-checked=true] {
  @apply border-neutral bg-neutral text-neutral-content border-opacity-10;
}
.som-som-toggle:disabled {
  @apply border-base-content cursor-not-allowed bg-transparent opacity-30;
  --ice-togglehandleborder: 0 0 0 3px rgba(var(--ice-base-content)) inset, var(--ice-handleoffsetcalculator) 0 0 3px rgba(var(--ice-base-content)) inset;
}

.som-som-toggle-mark {
  @apply hidden;
}"
`;

exports[`'toggle/utils.scss' prefixer > snap 1`] = `
".som-som-toggle-xs {
  --ice-handleoffset: 0.5rem;
  @apply h-4 w-6;
}
.som-som-toggle-sm {
  --ice-handleoffset: 0.75rem;
  @apply h-5 w-8;
}
.som-som-toggle-md {
  --ice-handleoffset: 1.5rem;
  @apply h-6 w-12;
}
.som-som-toggle-lg {
  --ice-handleoffset: 2rem;
  @apply h-8 w-16;
}"
`;
